gccida/g1/dwarf2out_abstract_function
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10607:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10610:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v10; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10613:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10616:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10640:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10648:13: error: expected ';' after expression
rtx = ( rtx)val_addr[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10661:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( rtx[1] != 10 ) 
     ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10662:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10681:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10689:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( int *)rtx[1]; 
              ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10703:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10724:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4441, "AT_unsigned"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/dwarf2out.c:10731:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_abstract_function/src/obj/dwarf2out.o] Error 1
